--- a/example/package.json
+++ b/example/package.json
@@ -8,15 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "sarma": "link:..",
     "sass": "^1.49.9",
     "vue": "^3.2.25",
-    "vue-json-pretty": "^2.0.6",
-    "sarma": "link:.."
+    "vue-json-pretty": "^2.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
-    "typescript": "^4.5.4",
+    "typescript": "^5.1.6",
     "vite": "^2.8.0",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^1.8.4"
   }
 }
